# actix-yew-oidc-demo

./: .gitignore  .justfile  README.md  actix-yew-oidc-demo.code-workspace  docker-compose.werf.yml  docker-compose.yml  werf.yaml
.helm/templates/: actix-react-oidc-backend-deployment.yaml  actix-react-oidc-backend-ingress.yaml  actix-react-oidc-backend-service.yaml  actix-react-oidc-keycloak-deployment.yaml  actix-react-oidc-keycloak-ingress.yaml  actix-react-oidc-keycloak-service.yaml  actix-react-oidc-keycloakdb-ingress.yaml  actix-react-oidc-keycloakdb-service.yaml  actix-react-oidc-keycloakdb-statefulset.yaml  actix-react-oidc-network-networkpolicy.yaml  actix-react-oidc-web-deployment.yaml  actix-react-oidc-web-ingress.yaml  actix-react-oidc-web-service.yaml  keycloak-realm-configmap.yaml
.keycloak/: realm-export.json
docs/: docker-deployment.md  minikube-deployment.md
src/backend/: .dockerignore  Cargo.toml  Dockerfile  KubernetesLocalProcessConfig.yaml
src/backend/src/: endpoints.rs  main.rs
src/web/: .justfile  Cargo.toml  LICENSE-MIT  index.html
src/web/src/: app.rs  components.rs  main.rs  opts.rs  pages.rs  route.rs  services.rs
src/web/src/components/: layout.rs  navmenu.rs
src/web/src/components/navmenu/: nav_container.rs  navbar.rs
src/web/src/pages/: client.rs  home.rs  server.rs
src/web/src/services/: alert.rs  auth.rs  config.rs
src/web/src/services/alert/: component.rs  factory.rs  model.rs  provider.rs
