[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
env_logger = "0.10.0"

serde = { version = "1", features = ["derive"] }

once_cell = "1.4"
aliri = "0.6.1"
aliri_oauth2 = { version = "0.9.0", features= ["default-tls"] }
aliri_actix = "0.8.0"