[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
# basic
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17"

# auth
yew-oauth2 = { version = "0.6.1", features = ["router", "openid", "openidconnect"] }
chrono = { version = "0.4.24",  features = ["wasmbind"] }
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
gloo-storage = "0.2.2"

# styles
stylist = { version = "0.12.0", features = ["yew", "yew_use_style"] }
yew-bootstrap = "0.5"

# log
log = "0.4.6"
wasm-logger = "0.2.0"

# config
clap = { version = "4.2.1", features = ["derive", "env"] }

# alert
yew-notifications = { git = "https://github.com/TheBestTvarynka/yew-notifications.git" }
time = { version = "0.3.21", features = ["local-offset", "wasm-bindgen"] }
uuid = { version = "1.3.2", features = ["v4", "js"] }

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# http-client
gloo-net = "0.2.6"
wasm-bindgen-futures = "0.4.35"

